[project]
name = "task-climber"
version = "0.1.0"
description = "task dependency graph and time requirements calculator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.5",
]

[project.optional-dependencies]
debugging = [
    "marimo>=0.17.7",
]
code-editor = [
    "black>=25.11.0",
    "isort>=7.0.0",
]
testing = [
    "pytest>=9.0.1",
]
